--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,7 +1,7 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 100,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "printWidth": 80,
+  "trailingComma": "es5"
 }
