--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,14 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
+  },
   "dependencies": {
     "@nestjs/common": "^10.4.12",
     "@nestjs/config": "^3.3.0",
@@ -64,8 +72,10 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
-    "prettier": "^3.4.1",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
     "serverless-offline": "^14.4.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -85,7 +95,7 @@
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
-    }, 
+    },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
