--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -5,6 +5,7 @@ provider:
   runtime: nodejs18.x
   region: us-east-1
   timeout: 30
+  stage: ${opt:stage, 'dev'}
 
 functions:
   api:
@@ -43,10 +44,17 @@ functions:
           method: post
           headers:
             - Content-Type
-
+      - http:
+          path: /{proxy+}
+          method: ANY
+          cors: true
+      - http:
+          path: /
+          method: ANY
+          cors: true
 plugins:
   - serverless-offline
-
+  
 custom:
   serverless-offline:
     httpPort: 3000
